# python-check-updates

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/plans/: 2026-04-19-safe-upgrade-design.md  2026-04-19-safe-upgrade-plan.md
src/pcu/: __init__.py  check.py  cli.py  deps.py  snapshot.py  styles.py  upgrade.py
