[project]
name = "python-check-updates"
version = "0.1.0"
description = "Check and upgrade Python dependency versions in pyproject.toml and requirements.txt"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "frndvrgs", email = "frndvrgs@gmail.com"},
]

[project.scripts]
pcu = "pcu:main"

[project.urls]
Repository = "https://github.com/frndvrgs/python-check-updates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcu"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.20.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
